# pysces

./: .gitignore  README.md  pyproject.toml  run_tests.sh
docs/: generate_api.sh  index.md  serve_docs.sh
docs/source/: conf.py  contributing.rst  generate_docs.py  how_does_se_work.rst  usage.rst
pysces/: assembly.py  config.py  equiangular_metric.py  horizontal_grid.py  initialization.py  mesh.py  model_info.py  multiprocessing.py  periodic_plane.py  physics_dynamics_coupling.py  processor_decomposition.py  pysces_types.py  run_dycore.py  se_grid.py  set_config.py  spectral.py  time_step.py
pysces/analytic_initialization/: hydrostatic_solid_body.py  moist_baroclinic_wave.py
pysces/distributed_memory/: _test_infra.py  global_assembly.py  global_communication.py  global_operations.py  multiprocessing.py  processor_decomposition.py
pysces/dynamical_cores/: hyperviscosity.py  mass_coordinate.py  model_config.py  model_state.py  operators_3d.py  physics_config.py  physics_dynamics_coupling.py  time_stepping.py  utils_3d.py  vertical_remap.py
pysces/mesh_generation/: bilinear_utils.py  cube_definitions.py  cubed_sphere.py  mesh.py  (+7 more)
spherical_spectral_element/: assembly.py  config.py  equiangular_metric.py  multiprocessing.py  operators.py  processor_decomposition.py  se_grid.py
tests/: .env  context.py  handmade_grids.py  run_tests.sh  test_assembly.py  test_cube.py  test_math.py  test_mesh.py  test_metric.py  test_multiprocessing.py  test_operators.py  test_periodic_plane.py  test_processor_decomp.py  test_se_grid.py  test_shallow_water.py  test_spectral.py
(+203 files in other folders)
