[project]
name = "pysces"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "frozendict>=2.4.7",
    "numpy>=2.2.6",
    "mpi4py>=4.1.1",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "matplotlib>=3.10.7",
    "pytest>=9.0.1",
]
doc = [
    "numpydoc>=1.10.0",
    "sphinx>=8.1.3",
]
jax = [
    "mpi4jax>=0.8.1.post2",
    "jax>=0.6.2",
]
torch = [
    "torchvision>=0.24.1",
]
mpich = [
    "mpich>=4.3.2",
]
